--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Emoji_u1f942.svg/120px-Emoji_u1f942.svg.png" alt="szampan" class="champagne">
-    <h1>Odliczanie do wydarzenia</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Emoji_u1f942.svg/120px-Emoji_u1f942.svg.png" alt="szampan" class="champagne">
+    <img src="https://www.shutterstock.com/image-vector/clinking-champagne-glasses-large-size-600nw-2257381799.jpg" alt="szampan" class="champagne">
+    <h1>Do wyrzucenia Tomka pozostało</h1>
+    <img src="https://www.shutterstock.com/image-vector/clinking-champagne-glasses-large-size-600nw-2257381799.jpg" alt="szampan" class="champagne">
   </div>
 
   <div id="countdown">Ładowanie...</div>
