--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="header">
     <img src="https://www.shutterstock.com/image-vector/clinking-champagne-glasses-large-size-600nw-2257381799.jpg" alt="szampan" class="champagne">
-    <h1>Do wyrzucenia Tomka pozostało</h1>
+    <h1>Do wyje**** Tomka pozostało</h1>
     <img src="https://www.shutterstock.com/image-vector/clinking-champagne-glasses-large-size-600nw-2257381799.jpg" alt="szampan" class="champagne">
   </div>
 
