--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://www.shutterstock.com/image-vector/clinking-champagne-glasses-large-size-600nw-2257381799.jpg" alt="szampan" class="champagne">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7v1zHImOs8mUvjW6MDgG75oEIzpPOyq-USQ&s" alt="szampan" class="champagne">
     <h1>Do wyje**** Tomka pozostało</h1>
-    <img src="https://www.shutterstock.com/image-vector/clinking-champagne-glasses-large-size-600nw-2257381799.jpg" alt="szampan" class="champagne">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7v1zHImOs8mUvjW6MDgG75oEIzpPOyq-USQ&s" alt="szampan" class="champagne">
   </div>
 
   <div id="countdown">Ładowanie...</div>
